fixed jumping text in user search

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -1644,6 +1644,10 @@ a.nav-username:hover
         color: #000
         width: 360px
 
+.head-search
+  .loading
+    margin-top: 0px !important
+
 .loading-spinner-container
   .loaded
     width: 100%
